修改llmclient chatWithTools方法 在调用llm未得到正确响应时，抛出异常。